[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["AnastasiyaRossova <rossovaay@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
